# CenterNet_3D_detection

./: LICENSE  README.md
sfa/: demo_2_sides.py  demo_front.py  test.py  train.py  train_pp.py
sfa/config/: kitti_config.py  train_config.py
sfa/core/point_cloud/: point_cloud_ops.py
sfa/cpp/: CMakeLists.txt  evaluate_object.cpp
sfa/data/: preprocess.py
sfa/data_process/: demo_dataset.py  kitti_bev_utils.py  kitti_data_utils.py  kitti_dataloader.py  kitti_dataset.py  kitti_voxel.py  transformation.py  voxel_generator.py
sfa/losses/: losses.py
sfa/models/: fpn_resnet.py  model_utils.py  pointpillars.py  resnet.py
sfa/utils/: demo_utils.py  det2eval.py  evaluation_utils.py  torch_utils.py  train_utils.py  train_val_split.py  visualization_utils.py
